# linear-tui

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  cliff.toml
.claude/skills/conventional-commit/: SKILL.md
.claude/skills/release/: skill.md
.github/workflows/: ci.yml  pr-title.yml  release-plz.yml  release.yml
docs/: api-type-guide.md
src/: app.rs  keys.rs  main.rs
src/api/: client.rs
src/ui/: issue_detail.rs  issue_list.rs  mod.rs  popup.rs
