[package]
name = "linear-tui"
version = "0.1.3"
edition = "2024"
rust-version = "1.85"
description = "A TUI client for Linear.app — manage issues, projects, and cycles from your terminal"
license = "MIT"
repository = "https://github.com/k1-c/linear-tui"
homepage = "https://github.com/k1-c/linear-tui"
keywords = ["tui", "linear", "issue-tracker", "cli", "project-management"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# Async
tokio = { version = "1", features = ["full"] }

# HTTP / GraphQL
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Auth
sha2 = "0.10"
base64 = "0.22"
rand = "0.9"
open = "5"

# Config
toml = "0.8"
directories = "5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"

# Error handling
anyhow = "1"

# Temp files
tempfile = "3"
